--- a/GUI/index.html
+++ b/GUI/index.html
@@ -18,13 +18,13 @@
 </head>
 
 <body>
-    <div id="form1" class="form">
+    <div id="form1" class="form hidden">
         <input type="text" id="fname" name="fname" style="visibility: hidden" value="0">
         <button id="Hello_Button" class="hidden btn btn-primary btn-sm abs l37 t76 tr"
             onclick="JS_Hello_Button_Function()">CAPTURE</button>
         <label id="RFID_Read" class="abs t95 l80"></label>
-        <div class="rel l5 t13 w90 h75 ">
-            <div id="Check_In_Panel"class="abs l50 t50 w30 h40 trns hidden">
+        <div id="Panel1" class="rel l5 t13 w90 h75">
+            <div id="Check_In_Panel"class="abs l50 t50 w30 h40 trns hidden Panel">
                 <p class="abs l2 t2">Check in</p>
                 <div class="flx abs l50 t40 w100 trns center hidden"> 
                     <label>Room ID:</label>
@@ -45,7 +45,7 @@
                     <button id="Save_Room" onclick=Check_In_Rooms() class="btn btn-primary btn-sm">Save</button>
                 </div>
             </div>
-            <div id="Room_Panel"class="abs l50 t50 w30 h40 hidden">
+            <div id="Room_Panel"class="abs l50 t50 w30 h40 hidden Panel">
                 <p class="abs l2 t2">Room number</p>
                 <div class="flx abs l50 t40 w100 trns center"> 
                     <label>Room ID:</label>
@@ -61,10 +61,24 @@
                     <button id="Save_Room2" class="btn btn-primary btn-sm">Save</button>
                 </div>
             </div>
+
+            <div id="Add_Room_Panel"class="abs l50 t50 w30 h40 hidden Panel">
+                <p class="abs l2 t2">Room number</p>
+                
+                <div class="flx abs l50 t50 w100 trns center"> 
+                    <label>Room Name:</label>
+                    <input id="room_name2"></input>
+                </div>
+                <div class="flx abs l50 t80 trns"> 
+                    <button onclick=Cancel4() class="btn btn-secondary btn-sm">Cancel</button>
+                    <button onclick=Save_Room3() id="Save_Room3" class="btn btn-primary btn-sm">Save</button>
+                </div>
+            </div>
+
             <div id="Tabs" class="flx">
-                <button onclick="Profile_Function()">Profile</button>
-                <button onclick="Room_Function()">Room</button>
-                <button onclick="Guest_Function()">Guest</button>
+                <button id="Tb1" onclick="Profile_Function()">Profile</button>
+                <button id="Tb2" onclick="Room_Function()">Room</button>
+                <button id="Tb3" onclick="Guest_Function()">Guest</button>
             </div>
 
             <div id="Tab1" class="">
@@ -76,29 +90,16 @@
                 <p id="us">Username</p>
                 <p id="pa">Password</p>
             </div>
-            <div id="Tab4" class="hidden">
-                <strong>Guest Information</strong><br>
-                <label for="gna">Full Name         :</label>
-                <input id="gna"></input><br>
-                <label for="gem">Email             :</label>
-                <input id="gem"></input><br>
-                <label for="gnu">Contact Number    : </label>
-                <input id="gnu"></input><br>
-                <label for="gad">Address           : </label>
-                <input id="gad"></input><br>
-                <label for="grf">Assigned RFID Card:</label>
-                <input id="grf"></input><br>
-                <button onclick=Cancel3() class="btn btn-secondary btn-sm">Cancel</button>
-                <button id="Save_Guest" onclick=Save_Guest_Info() class="btn btn-primary btn-sm">Save</button>
-            </div>
 
             <div id="Tab2" class="hidden">
-                All Rooms
+                <div class="flx flex2">
+                    <label>All Rooms</label> <button onclick=Display_Add_Room_Tab()>Add Room</button>           
+                </div>
                 <div class="of table-responsive">
                     <table className="table table-hover" id="table1">
                         <thead>
                         <tr className="text-center">
-                            <th scope="col">Room ID</th>
+                            <th style="width:10%" scope="col">Room ID</th>
                             <th scope="col">Room Name</th>
                             <th scope="col">Status</th>
                             <th scope="col">Current Guest</th>
@@ -120,9 +121,11 @@
                 </div>
             </div>
             <div id="Tab3" class="hidden">
-                All Guests
+                <div class="flx flex2">
+                    <label>All Guests</label> <button onclick=DisplayGuest2()>Add Guest</button>
+                </div>
                 <div class="of table-responsive">
-                    <table className="table table-hover" id="table1">
+                    <table className="table table-hover" id="table2">
                         <thead>
                         <tr className="text-center">
                             <th scope="col">Guest ID</th>
@@ -147,10 +150,68 @@
                 </div>
             </div>
 
+            <div id="Tab4" class="hidden">
+                <div class="flx flex2">
+                    <div>
+                        <strong>Guest Information</strong><br>
+                        <label for="gna">Full Name         :</label>
+                        <input id="gna"></input><br>
+                        <label for="gem">Email             :</label>
+                        <input id="gem"></input><br>
+                        <label for="gnu">Contact Number    : </label>
+                        <input id="gnu"></input><br>
+                        <label for="gad">Address           : </label>
+                        <input id="gad"></input><br>
+                        <label for="grf">Assigned RFID Card:</label>
+                        <input id="grf"></input><br>
+                        <input id="gid" class="hidden"></input><br>
+                        <button onclick=Cancel3() class="btn btn-secondary btn-sm">Cancel</button>
+                        <button id="Save_Guest" onclick=Save_Guest_Info() class="btn btn-primary btn-sm">Save</button>
+                    </div>
+                    <div>
+                        <strong class="p100">Time In or out Records</strong>
+                        <div class="of table-responsive">
+                            <table className="table table-hover" id="table3">
+                                
+                                <thead>
+                                <tr className="text-center">
+                                    <th scope="col">Room ID</th>
+                                    <th scope="col">Action</th>
+                                    <th scope="col">Date</th>
+                                </tr>
+                                </thead>
+                                <tbody id="Tab4t" className="text-center">
+                                    <tr>
+                                        <td className="font-weight-bold">12/01/22</td>
+                                        <td className="font-weight-bold">07:30 AM</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
+    </div>
+
+    <div id="form2" class="form" >
+        <form action="" class="abs l50 t50 w30 h50 trns flxi center Card">
+            <br>
+            <strong>SMARTLOCK: Admin Page</strong> <br>
+            <label for="Username">USERNAME: </label>
+            <input id="Username" type="text"> <br>
+            <label for="Password">PASSWORD: </label>
+            <input id="Password" type="password"><br>
+            <button onclick=SubmitLogin() type="button">SUBMIT</button><br>
+        </form>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
         crossorigin="anonymous"></script>
+    <script>
+        document.getElementById("Username").value = "adminjj"
+        document.getElementById("Password").value = "admindlc"
+// SubmitLogin()
+    </script>
 </body>
 </html>
