--- a/GUI/index.html
+++ b/GUI/index.html
@@ -19,11 +19,13 @@
 
 <body>
     <div id="form1" class="form hidden">
-        <input type="text" id="fname" name="fname" style="visibility: hidden" value="0">
-        <button id="Hello_Button" class="hidden btn btn-primary btn-sm abs l37 t76 tr"
-            onclick="JS_Hello_Button_Function()">CAPTURE</button>
-        <label id="RFID_Read" class="abs t95 l80"></label>
-        <div id="Panel1" class="rel l5 t13 w90 h75">
+        <label id="RFID_Read" class="abs t95 l5"></label>
+        <div id="Panel0" class="rel flx flex3 l5 t2 w90 h8 center">
+            <h1>John Jose de la Cruz</h1>
+            <button id="Hello_Button" class="bta"
+                onclick="JS_Hello_Button_Function()"><strong>LOGOUT</strong></button>
+        </div>
+        <div id="Panel1" class="rel l5 t6 w90 h75">
             <div id="Check_In_Panel"class="abs l50 t50 w30 h40 trns hidden Panel">
                 <p class="abs l2 t2">Check in</p>
                 <div class="flx abs l50 t40 w100 trns center hidden"> 
@@ -45,9 +47,30 @@
                     <button id="Save_Room" onclick=Check_In_Rooms() class="btn btn-primary btn-sm">Save</button>
                 </div>
             </div>
+            <div id="Check_In_Panel2"class="abs l50 t50 w30 h40 trns hidden Panel">
+                <p class="abs l2 t2">Check in</p>
+                <div class="flx abs l50 t40 w100 trns center hidden"> 
+                    <label>Room ID:</label>
+                    <input id="room_id_to_CI2"></input>
+                </div>
+
+                <div class="flx abs l50 t35 w100 trns center"> 
+                    <label>Room Name:</label>
+                    <input id="room_name_to_CI2"></input>
+                </div>
+                
+                <div class="flx abs l50 t50 w100 trns center"> 
+                    <label>Guest Name:</label>
+                    <select id="guest_name_to_CI2"></select>
+                </div>
+                <div class="flx abs l50 t80 trns"> 
+                    <button onclick=Cancel1A() class="btn btn-secondary btn-sm">Cancel</button>
+                    <button id="Save_Room" onclick=Check_In_Rooms2() class="btn btn-primary btn-sm">Save</button>
+                </div>
+            </div>
             <div id="Room_Panel"class="abs l50 t50 w30 h40 hidden Panel">
                 <p class="abs l2 t2">Room number</p>
-                <div class="flx abs l50 t40 w100 trns center"> 
+                <div class="flx abs l50 t40 w100 trns center hidden"> 
                     <label>Room ID:</label>
                     <input id="room_id"></input>
                 </div>
@@ -56,7 +79,7 @@
                     <label>Room Name:</label>
                     <input id="room_name"></input>
                 </div>
-                <div class="flx abs l50 t80 trns"> 
+                <div class="flx abs l50 t80 trns flex2"> 
                     <button onclick=Cancel2() class="btn btn-secondary btn-sm">Cancel</button>
                     <button id="Save_Room2" class="btn btn-primary btn-sm">Save</button>
                 </div>
@@ -76,9 +99,12 @@
             </div>
 
             <div id="Tabs" class="flx">
-                <button id="Tb1" onclick="Profile_Function()">Profile</button>
-                <button id="Tb2" onclick="Room_Function()">Room</button>
-                <button id="Tb3" onclick="Guest_Function()">Guest</button>
+                <button class="unselected" id="Tb1" onclick="Profile_Function()">Profile</button>
+                <button class="unselected" id="Tb2" onclick="Room_Function()">Room</button>
+                <button class="unselected" id="Tb3" onclick="Guest_Function()">Guest</button>
+                <script>
+                    document.getElementById("Tb1").classList.add("selected");
+                </script>
             </div>
 
             <div id="Tab1" class="">
@@ -93,10 +119,10 @@
 
             <div id="Tab2" class="hidden">
                 <div class="flx flex2">
-                    <label>All Rooms</label> <button onclick=Display_Add_Room_Tab()>Add Room</button>           
+                    <label>All Rooms</label> <button class="btA" onclick=Display_Add_Room_Tab()>Add Room</button>           
                 </div>
                 <div class="of table-responsive">
-                    <table className="table table-hover" id="table1">
+                    <table class="of tbl50" className="table table-hover" id="table1">
                         <thead>
                         <tr className="text-center">
                             <th style="width:10%" scope="col">Room ID</th>
@@ -122,13 +148,13 @@
             </div>
             <div id="Tab3" class="hidden">
                 <div class="flx flex2">
-                    <label>All Guests</label> <button onclick=DisplayGuest2()>Add Guest</button>
+                    <label>All Guests</label> <button class="btA" onclick=DisplayGuest2()>Add Guest</button>
                 </div>
                 <div class="of table-responsive">
-                    <table className="table table-hover" id="table2">
+                    <table  class="of tbl50" className="table table-hover" id="table2">
                         <thead>
                         <tr className="text-center">
-                            <th scope="col">Guest ID</th>
+                            <th style="width:10%" scope="col">Guest ID</th>
                             <th scope="col">Guest Name</th>
                             <th scope="col">Status</th>
                             <th scope="col">Current Room</th>
@@ -171,8 +197,7 @@
                     <div>
                         <strong class="p100">Time In or out Records</strong>
                         <div class="of table-responsive">
-                            <table className="table table-hover" id="table3">
-                                
+                            <table class="of tbl50" className="table table-hover" id="table3">
                                 <thead>
                                 <tr className="text-center">
                                     <th scope="col">Room ID</th>
@@ -202,8 +227,15 @@
             <input id="Username" type="text"> <br>
             <label for="Password">PASSWORD: </label>
             <input id="Password" type="password"><br>
-            <button onclick=SubmitLogin() type="button">SUBMIT</button><br>
+            <button class="btA" onclick=SubmitLogin() type="button">SUBMIT</button><br>
         </form>
+    </div>
+    <div id="IDB" class="abs l50 t50 trns flxi of Card2 z100 hidden">
+        <div><strong id="IDB_Title"> </strong></div>
+        <span>
+            <label id="IDB_Msg"></label>
+            <button onclick=DialogBoxClose() class="btA">OK</button>
+        </span>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
