--- a/GUI/index.html
+++ b/GUI/index.html
@@ -11,6 +11,7 @@
     <link href="canon.css" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script type="text/javascript" src="/eel.js"></script>
+    <script type="text/javascript" src="moment.js"></script>
     <script type="text/javascript" src="js.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
@@ -108,13 +109,19 @@
             </div>
 
             <div id="Tab1" class="">
-                <strong>User Information</strong>
-                <p id="na">Full Name:</p>
-                <p id="em">Email:</p>
-                <p id="nu">Contact Number</p>
-                <strong>Credentials</strong>
-                <p id="us">Username</p>
-                <p id="pa">Password</p>
+                <strong>User Information</strong><br>
+                <label for="na">Full Name:</label><br>
+                <input id="na" type="text"><br>
+                <label for="em">Email:</label><br>
+                <input id="em" type="text"><br>
+                <label for="nu">Contact Number</label><br>
+                <input id="nu" type="text"><br>
+                <strong>Credentials</strong><br>
+                <label for="us">Username</label><br>
+                <input id="us" type="text"><br>
+                <label for="pa">Password</label><br>
+                <input id="pa" type="text"><br><br>
+                <button onclick=Save_Admin() class="btn btn-primary btn-sm">Save</button>
             </div>
 
             <div id="Tab2" class="hidden">
@@ -127,10 +134,12 @@
                         <tr className="text-center">
                             <th style="width:10%" scope="col">Room ID</th>
                             <th scope="col">Room Name</th>
-                            <th scope="col">Status</th>
-                            <th scope="col">Current Guest</th>
+                            <th style="width:10%" scope="col">Status</th>
+                            <th style="width:30%" scope="col">Current Guest</th>
                             <th scope="col">Date Added</th>
                             <th scope="col">Actions</th>
+                            <th style="width:7px"></th>
+
                         </tr>
                         </thead>
                         <tbody id="Tab2t" className="text-center">
@@ -150,16 +159,17 @@
                 <div class="flx flex2">
                     <label>All Guests</label> <button class="btA" onclick=DisplayGuest2()>Add Guest</button>
                 </div>
-                <div class="of table-responsive">
-                    <table  class="of tbl50" className="table table-hover" id="table2">
+                <div class="table-responsive">
+                    <table  class="tbl50" className="table table-hover" id="table2">
                         <thead>
                         <tr className="text-center">
                             <th style="width:10%" scope="col">Guest ID</th>
-                            <th scope="col">Guest Name</th>
-                            <th scope="col">Status</th>
+                            <th style="width:30%" scope="col">Guest Name</th>
+                            <th style="width:10%" scope="col">Status</th>
                             <th scope="col">Current Room</th>
                             <th scope="col">Date Added</th>
                             <th scope="col">Actions</th>
+                            <th style="width:7px"></th>
                         </tr>
                         </thead>
                         <tbody id="Tab3t" className="text-center">
@@ -177,7 +187,7 @@
             </div>
 
             <div id="Tab4" class="hidden">
-                <div class="flx flex2">
+                <div id="tab4inside" class="flx flex2 of">
                     <div>
                         <strong>Guest Information</strong><br>
                         <label for="gna">Full Name         :</label>
@@ -190,6 +200,18 @@
                         <input id="gad"></input><br>
                         <label for="grf">Assigned RFID Card:</label>
                         <input id="grf"></input><br>
+                        <label for="pcnt">Number of people:</label>
+                        <input id="pcnt" /><br>
+                        <label id="Birth" for="birthday">Birthdate:</label>
+                        <span class="flx blk">
+                            <input type="date" id="bthy" onChange=birthC()>
+                            <div id="age"></div>
+                        </span>
+                        <label for="gec">Emergency Contact Person:</label>
+                        <input id="gec" /><br>
+                        <label for="gecn">Emergency Contact Person Phone Number:</label>
+                        <input id="gecn" /><br>
+
                         <input id="gid" class="hidden"></input><br>
                         <button onclick=Cancel3() class="btn btn-secondary btn-sm">Cancel</button>
                         <button id="Save_Guest" onclick=Save_Guest_Info() class="btn btn-primary btn-sm">Save</button>
@@ -197,7 +219,7 @@
                     <div>
                         <strong class="p100">Time In or out Records</strong>
                         <div class="of table-responsive">
-                            <table class="of tbl50" className="table table-hover" id="table3">
+                            <table class="of tbl51" className="table table-hover" id="table3">
                                 <thead>
                                 <tr className="text-center">
                                     <th scope="col">Room ID</th>
