--- a/GUI/index.html
+++ b/GUI/index.html
@@ -125,11 +125,11 @@
             </div>
 
             <div id="Tab2" class="hidden">
-                <div class="flx flex2">
+                <div id="tablee1A" class="flx flex2">
                     <label>All Rooms</label> <button class="btA" onclick=Display_Add_Room_Tab()>Add Room</button>           
                 </div>
                 <div class="of table-responsive">
-                    <table class="of tbl50" className="table table-hover" id="table1">
+                    <table id="tablee1" class="of tbl50" className="table table-hover" id="table1">
                         <thead>
                         <tr className="text-center">
                             <th style="width:10%" scope="col">Room ID</th>
@@ -156,11 +156,11 @@
                 </div>
             </div>
             <div id="Tab3" class="hidden">
-                <div class="flx flex2">
+                <div id="tablee2A" class="flx flex2">
                     <label>All Guests</label> <button class="btA" onclick=DisplayGuest2()>Add Guest</button>
                 </div>
                 <div class="table-responsive">
-                    <table  class="tbl50" className="table table-hover" id="table2">
+                    <table id="tablee2" class="tbl50" className="table table-hover" id="table2">
                         <thead>
                         <tr className="text-center">
                             <th style="width:10%" scope="col">Guest ID</th>
